--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/plugin.zip">Blog</a></li>
+        		<li><a href="lalwani.github.io/kodi/plugin.zip">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
